--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,8 @@
     background-color: #1976d2;
     color: white;
     border: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   
   .button:hover, button:hover {
