Done form controls

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -9,7 +9,7 @@
     <p *ngIf="product.description">
         Description: {{ product.description }}
     </p>
-    <button (click)="share()">
+    <button class="button" (click)="share()">
         Share
     </button>
     <app-product-alerts [product]="product" (notify)="onNotify()"></app-product-alerts>
